Clear all project.

--- a/BISP.Video.DirectShow/BISP.Video.DirectShow.csproj
+++ b/BISP.Video.DirectShow/BISP.Video.DirectShow.csproj
@@ -16,4 +16,8 @@
 	  <ProjectReference Include="..\BISP.Video\BISP.Video.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Enums\" />
+	</ItemGroup>
+
 </Project>
