--- a/BISP.Video/BISP.Video.csproj
+++ b/BISP.Video/BISP.Video.csproj
@@ -7,15 +7,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Internals\**" />
+	  <EmbeddedResource Remove="Internals\**" />
+	  <None Remove="Internals\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="System.Drawing.Common" Version="8.0.7" />
+		<PackageReference Include="System.Reactive" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\BISP.Video.Core\BISP.Video.Core.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Internals\" />
 	</ItemGroup>
 
 </Project>
