Add Channel and Observable

--- a/BISP.Video.Wpf/BISP.Video.Wpf.csproj
+++ b/BISP.Video.Wpf/BISP.Video.Wpf.csproj
@@ -9,4 +9,8 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="System.Reactive" Version="6.0.1" />
+	</ItemGroup>
+
 </Project>
