--- a/BISP.Video.DirectShow.Wpf/BISP.Video.DirectShow.Wpf.csproj
+++ b/BISP.Video.DirectShow.Wpf/BISP.Video.DirectShow.Wpf.csproj
@@ -10,6 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="System.Reactive" Version="6.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\BISP.Video.Wpf\BISP.Video.Wpf.csproj" />
 	</ItemGroup>
 
