--- a/BISP.Video.Wpf.Testing/BISP.Video.Wpf.Testing.csproj
+++ b/BISP.Video.Wpf.Testing/BISP.Video.Wpf.Testing.csproj
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
+		<PackageReference Include="System.Reactive" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
